2018-05-07  Adhemerval Zanella  <adhemerval.zanella@linaro.org>

	* sysdeps/unix/sysv/linux/x86_64/cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/libc-cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/librt-cancellation.S: Remove file.
	* sysdeps/unix/sysv/linux/x86_64/sigcontextinfo.h (ucontext_get_pc):
	New function.
	* sysdeps/x86_64/nptl/tcb-offsets.sym (TCB_CANCELING_BITMASK):
	Remove.

	[BZ #12683]
	* manual/llio.texi: Adjust comments regarding
	pthread_enable_asynccancel and pthread_disable_asynccancel.
	* nptl/Makefile (routines): Add syscall_cancel object.
	(libpthread-routines): Add pthread_kill_internal and remove
	cancellation object.
	(CFLAGS-cancellation.c): Remove rule.
	(CFLAGS-syscall_cancel.c): New rule.
	(tests): Add tst-cancel28.
	* nptl/Versions [GLIBC_PRIVATE] (libc): Add __syscall_cancel,
	__syscall_cancel_arch_start, and __syscall_cancel_arch_end.
	* nptl/cancellation.c: Remove file.
	* sysdeps/nptl/librt-cancellation.c: Likewise.
	* nptl/descr.h (CANCELING_BIT, CANCELING_BITMASK): Remove define.
	(CANCELED_BIT, EXITING_BIT, TERMINATED_BIT, SETXID_BIT,
	CANCEL_RESTMASK): Adjust value with CANCELED_BIT removal.
	* nptl/libc-cancellation.c (__syscall_cancel): New symbol: symbol
	brigde for non-cancellable syscalls.
	(__syscall_do_cancel): New symbol.
	* nptl/nptl-init.c (sigcancel_handler): Rewrite function to avoid race
	conditions.
	(__pthread_initialize_minimal_internal): Add SA_RESTART to SIGCANCEL
	handler.
	(UCONTEXT_SIGMASK): New macro.
	* nptl/pthreadP.h (__do_cancel): Rewrite to both disable asynchronous
	cancellation and setting the thread as cancelled.
	(__do_cancel_with_result): New macro.
	(CANCEL_ASYNC, CANCEL_RESET, LIBC_CANCEL_ASYNC, LIBC_CANCEL_RESET,
	LIBC_CANCEL_HANDLED): Remove macros.
	(__syscall_cancel_arch, __syscall_do_cancel, __pthread_kill_internal):
	New prototypes.
	(__pthread_enable_asynccancel, __pthread_disable_asynccancel,
	__libc_enable_asynccancel, __libc_disable_asynccancel,